[package]
name = "furdb"
version = "0.1.0"
edition = "2021"
authors = ["Madhavan Raja"]
license = "GNU Public License"
readme = "README.org"
repository = "https://github.com/madhavan-raja/furdb"
description = """
A space-efficient database management system.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0"
bitvec = "1.0.0"
reqwest = { version = "0.11", features = ["blocking"] }