[package]
name = "furdb"
version = "0.1.2-alpha"
edition = "2021"
authors = ["Madhavan Raja"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/madhavan-raja/furdb"
description = """A minimal Database Management System that prioritizes storage space usage
and fast lookup/query times."""

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
actix-web = "4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
chrono = "0.4.34"
clap = { version = "4.5.4", features = ["derive", "env"] }
env_logger = "0.11.3"
log = "0.4.21"
clap-verbosity-flag = "2.2.0"
thiserror = "1.0.58"
bitvec = "1.0.0"
reqwest = { version = "0.12.3", features = ["blocking"] }
