[package]
name = "furdb_core"
version = "0.1.1"
edition = "2021"
authors = ["Madhavan Raja"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/madhavan-raja/furdb"
description = """
A space-efficient relational database management system.
"""

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0"
bitvec = "1.0.0"
reqwest = { version = "0.11", features = ["blocking"] }
